--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org7b3fa84" class="outline-2">
-<h2 id="org7b3fa84">How this blog works</h2>
-<div class="outline-text-2" id="text-org7b3fa84">
+<div id="outline-container-org85f9377" class="outline-2">
+<h2 id="org85f9377">How this blog works</h2>
+<div class="outline-text-2" id="text-org85f9377">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org392aa98" class="outline-3">
-<h3 id="org392aa98">Org mode</h3>
-<div class="outline-text-3" id="text-org392aa98">
+<div id="outline-container-org9937805" class="outline-3">
+<h3 id="org9937805">Org mode</h3>
+<div class="outline-text-3" id="text-org9937805">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-org1f2c7fa" class="outline-3">
-<h3 id="org1f2c7fa">Github pages</h3>
-<div class="outline-text-3" id="text-org1f2c7fa">
+<div id="outline-container-org96108e4" class="outline-3">
+<h3 id="org96108e4">Github pages</h3>
+<div class="outline-text-3" id="text-org96108e4">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orge84c67e" class="outline-3">
-<h3 id="orge84c67e">Thanks</h3>
-<div class="outline-text-3" id="text-orge84c67e">
+<div id="outline-container-orgd3b53ab" class="outline-3">
+<h3 id="orgd3b53ab">Thanks</h3>
+<div class="outline-text-3" id="text-orgd3b53ab">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
