--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org2ddc4a7" class="outline-2">
-<h2 id="org2ddc4a7">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org2ddc4a7">
+<div id="outline-container-org5f42338" class="outline-2">
+<h2 id="org5f42338">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org5f42338">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org8220a01" class="outline-3">
-<h3 id="org8220a01">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org8220a01">
+<div id="outline-container-org4770070" class="outline-3">
+<h3 id="org4770070">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org4770070">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgcb02189" class="outline-4">
-<h4 id="orgcb02189">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgcb02189">
+<div id="outline-container-org41a95c3" class="outline-4">
+<h4 id="org41a95c3">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org41a95c3">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org8deadd4" class="outline-4">
-<h4 id="org8deadd4">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org8deadd4">
+<div id="outline-container-orgc14102b" class="outline-4">
+<h4 id="orgc14102b">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgc14102b">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgcd37dee" class="outline-3">
-<h3 id="orgcd37dee">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgcd37dee">
+<div id="outline-container-org9028133" class="outline-3">
+<h3 id="org9028133">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org9028133">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgb36f3c4" class="outline-3">
-<h3 id="orgb36f3c4">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgb36f3c4">
+<div id="outline-container-org05f6c1e" class="outline-3">
+<h3 id="org05f6c1e">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org05f6c1e">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org3ae61f1" class="outline-3">
-<h3 id="org3ae61f1">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org3ae61f1">
+<div id="outline-container-org5c3b3c2" class="outline-3">
+<h3 id="org5c3b3c2">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org5c3b3c2">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org7540a6f" class="outline-3">
-<h3 id="org7540a6f">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org7540a6f">
+<div id="outline-container-org31e65ea" class="outline-3">
+<h3 id="org31e65ea">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org31e65ea">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org7be8c5c" class="outline-4">
-<h4 id="org7be8c5c">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org7be8c5c">
+<div id="outline-container-org3cc937d" class="outline-4">
+<h4 id="org3cc937d">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org3cc937d">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-orgfe660c0" class="outline-3">
-<h3 id="orgfe660c0">Aliasing</h3>
-<div class="outline-text-3" id="text-orgfe660c0">
+<div id="outline-container-orgbecb80b" class="outline-3">
+<h3 id="orgbecb80b">Aliasing</h3>
+<div class="outline-text-3" id="text-orgbecb80b">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org4b6fe4c" class="outline-3">
-<h3 id="org4b6fe4c">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org4b6fe4c">
+<div id="outline-container-org28d01dc" class="outline-3">
+<h3 id="org28d01dc">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org28d01dc">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
