--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org9c8d436" class="outline-2">
-<h2 id="org9c8d436">404 - page not found</h2>
-<div class="outline-text-2" id="text-org9c8d436">
+<div id="outline-container-org82ea619" class="outline-2">
+<h2 id="org82ea619">404 - page not found</h2>
+<div class="outline-text-2" id="text-org82ea619">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
