--- a/scittle-hilbert-curve.html
+++ b/scittle-hilbert-curve.html
@@ -30,9 +30,9 @@ Let's make a hilbert curve on is page in Clojure (the one
 &#10084) and allow the reader to manipulate the code in-place.
 </p>
 
-<div id="outline-container-orgbde0ca4" class="outline-2">
-<h2 id="orgbde0ca4">What is a Hilbert Curve?</h2>
-<div class="outline-text-2" id="text-orgbde0ca4">
+<div id="outline-container-orgd048d06" class="outline-2">
+<h2 id="orgd048d06">What is a Hilbert Curve?</h2>
+<div class="outline-text-2" id="text-orgd048d06">
 <p>
 A <a href="http://en.wikipedia.org/wiki/Hilbert_curve">Hibert Curve</a> is a space-filling fractal. it's useful for mapping 2 dimensional onto 1 dimension. I like it because it looks good.
 </p>
@@ -45,17 +45,17 @@ A <a href="http://en.wikipedia.org/wiki/Hilbert_curve">Hibert Curve</a> is a spa
 </div>
 </div>
 
-<div id="outline-container-org85110d5" class="outline-2">
-<h2 id="org85110d5">What is Scittle?</h2>
-<div class="outline-text-2" id="text-org85110d5">
+<div id="outline-container-orgef42730" class="outline-2">
+<h2 id="orgef42730">What is Scittle?</h2>
+<div class="outline-text-2" id="text-orgef42730">
 <p>
 <a href="https://github.com/babashka/scittle">Scittle</a> is is a small Clojure interpreter designed to be embedded inside applications, for example to evaluate Clojure input by the user.
 </p>
 </div>
 
-<div id="outline-container-org6681d67" class="outline-3">
-<h3 id="org6681d67">Aside</h3>
-<div class="outline-text-3" id="text-org6681d67">
+<div id="outline-container-org5e7061d" class="outline-3">
+<h3 id="org5e7061d">Aside</h3>
+<div class="outline-text-3" id="text-org5e7061d">
 <p>
 It's crazy how simple Scittle is to use. I'm writing in an <a href="https://orgmode.org">org file</a> in Emacs. I embed some script tags in a <a href="https://orgmode.org/manual/Quoting-HTML-tags.html">export block</a>. Like so:
 </p>
@@ -94,9 +94,9 @@ Then I run my regular <a href="how-this-blog-works.html">build script</a> and aw
 </div>
 </div>
 
-<div id="outline-container-org3277fa2" class="outline-2">
-<h2 id="org3277fa2">1. Handle user input in Clojure</h2>
-<div class="outline-text-2" id="text-org3277fa2">
+<div id="outline-container-orgbd54244" class="outline-2">
+<h2 id="orgbd54244">1. Handle user input in Clojure</h2>
+<div class="outline-text-2" id="text-orgbd54244">
 <p>
 First let's make a <code>textarea</code> in html to get the user input. We'd like a button to click evaluate what the user enters. Then output the result beneth.
 </p>
@@ -172,9 +172,9 @@ Right nice.
 </div>
 </div>
 
-<div id="outline-container-org5dc8a18" class="outline-2">
-<h2 id="org5dc8a18">drawing in HTML</h2>
-<div class="outline-text-2" id="text-org5dc8a18">
+<div id="outline-container-org6f24eff" class="outline-2">
+<h2 id="org6f24eff">drawing in HTML</h2>
+<div class="outline-text-2" id="text-org6f24eff">
 <p>
 I think the easiest way to do this will be with <code>canvas</code>.
 </p>
@@ -260,9 +260,9 @@ Now it's just a matter of choosing the right points.
 </div>
 </div>
 
-<div id="outline-container-org2f45659" class="outline-2">
-<h2 id="org2f45659">Hilbert Curve</h2>
-<div class="outline-text-2" id="text-org2f45659">
+<div id="outline-container-org2df711d" class="outline-2">
+<h2 id="org2df711d">Hilbert Curve</h2>
+<div class="outline-text-2" id="text-org2df711d">
 <p>
 How this fractal works is that there are four patterns, and each one of these four pattern can be split up into quaters, and each one of those quaters can be swapped for one of the origional four patterns. Recursion.
 </p>
@@ -288,7 +288,7 @@ So each path has four points we can think about it as tracing three sides of a s
 </p>
 
 <p>
-Let's think about our canvas as a square split up into square cells. The number of cells is controlled by the number of iterations we perform (4<sup>n</sup>). Each cell contains a pattern, we need to have the right order of cells and the right pattern for each. So we'll aim for a vector of <code>cells</code>, where a <code>cell</code> is an [x, y] vector identifying the cell, and a pattern keyword. Here's the zero'th iteration with a single cell in it:
+Let's think about our canvas as a square split up into square cells. The number of cells is controlled by the number of iterations we perform (4<sup>n</sup>). Each cell contains a pattern, we need to have the right order of cells and the right pattern for each. So we'll aim for a sequence of <code>cells</code>, where a <code>cell</code> is an [x, y] vector identifying the cell, and a pattern. Here's the zero'th iteration with a single cell in it:
 </p>
 
 <div class="org-src-container">
@@ -357,7 +357,7 @@ Okay, now we would like to iterate that, each time concatinating the results int
 </div>
 
 <p>
-Lovely. Okay we don't care about the patterns any more, but we do want co change from cells to points. Let's grab the ordered cells and use the canvas dimensions to turn them into pixels.
+Lovely. Okay we don't care about the patterns any more once we have finished iterating, but we do want co change from cells to points on the canvas. Let's grab the ordered cells and use the canvas dimensions to turn them into points.
 </p>
 
 <div class="org-src-container">
